Table categorias{
    id int [pk, increment]
    nombre varchar
    slug varchar [unique]
    descripcion text
    created_at timestamp
    updated_at timestamp
}

Table productos{
    id int [pk, increment]
    nombre varchar
    categoria_id int [ref: > categorias.id]
    descripcion_corta text
    descripcion_larga text
    precio_compra decimal(10,2)
    precio_venta decimal(10,2)
    stock int
    created_at timestamp
    updated_at timestamp
}

Table producto_imagenes{
    id int [pk, increment]
    producto_id int [ref: > productos.id]
    imagen varchar
    created_at timestamp
    updated_at timestamp
}
